     + Mutate ADF.
     + Crossover ADF.
   - Program optimization.
   - Multithread examine.
   - Add scripting for individual testing and comparsion.
   - Support for galapagos (https://github.com/brunoro/galapagos) visualisation tool.

Now
 - Support for C++0x (GCC 4.5.3)
 * VM
   - Add comparator for WeakObject and Object to use with STL containers.
 * GP
   - Add optimization.
   * Static types
     + Remove types in file.

Version 0.0.4 2012-01-30
 - Support for win32.
 - Relicense as MIT.
 * VM
   - Fix function calls with ERROR arguments.
   - Make set of objects local for environment.
   - Fix Object's debugging for Win32.
 * GP
   * Static types
     + Move types to file.

Version 0.0.3 2011-12-04
 - Use own interpreter for config.
 - Remove Guile dependencies.
 * VM
   - Support for LIST in ADF definition.
   - Support for redefinition symbols.
   - Automatic symbol definition.
   - Fix work with signed INTEGER.
 * GP
   - Start to define types.

Version 0.0.2 2011-01-31
 * VM
   - Throw on wrong function number at minimization.
   - Closure support.
   - Use symbols map for convert from string to Object.
   - Add SYMBOL and MACRO object's types.
   - Symbol support.
 * GP
   - Change generation of new population.
   - Remove mutations from crossover.
   - Stop on non-move answer.

Version 0.0.1 2011-01-04
 * Remove GTKmm dependencies.
 * Use GNU Guile for scripting and config.
 * Move VM into library.
 * Catch Scheme exceptions.
 * Load options from Scheme file.
 * Remove GP test and load other options.
 * Append --enable-gprof and --enable-debug options.

Version 0.0.0.10 2011-01-02
 * Remove Ruby support.
 * Dump full population at the end.
 * Make ST_ANSWER_QUALITY, ST_MOVE_DIFF, ST_DIR_DIFF as aggregative.
 * Fix overflow in aggregation.
 * Append ST_DIRS parameter.
 * Append ST_AREA parameter.
 * Print world map.

Version 0.0.0.9 2010-12-30
 * Remove check for equality in mutation and crossover because it can break good ADF.